--- a/app/assets/stylesheets/content.css.scss
+++ b/app/assets/stylesheets/content.css.scss
@@ -9,11 +9,15 @@ body {
       padding-bottom: 40px;
     }
 
+    &.navbar-inverse {
+      background: rgba(0, 0, 0, 0.8);
+    }
+
     .navbar-brand {
-      padding: 5px 15px;
+      padding: 9px 15px;
 
       img {
-        height: 40px;
+        height: 32px;
       }
     }
 
